# addie

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pylintrc  .travis.yml  LICENSE  Login_test_script_for_ADDIE.py  MANIFEST.in  Pipfile  README.md  addie.spec.patch  addiedevel.sh  buildrpm  environment.yml  fastGR.py  fastgr.py  fastgr.spec  fastgr.spec.patch  fastgrdevel.bat  fastgrdevel.sh  flake8  hold-travis.yml  install-requirements.txt  pixi-mapping.json  pyproject.toml  pystog_input.json  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests  setup-requirements.txt  setup.cfg  setup.py  setup.py~  test-requirements.txt  update_submodule.sh
.github/: dependabot.yml
.github/workflows/: actions.yml  addie_ci.yml  test_and_deploy.yml  update-lockfiles.yml
Calibration/: CalibrationDiagnostics.py  Calibration_plots.py  calculation_for_dspacing_resolution_by_pixel_peak.py
addie/: __init__.py  _version.py  about.py  addiedriver.py  clear.sh  config.json  configuration_initializer.py  customtreeview.py  edit_sq_dialog.py  graphicviewlib.py  gui_fgr3.py  icons_rc.py  ipythondockwidget.py  main.py  mantid_ipython_widget.py  mplgraphicsview.py  pdf_lines_manager.py  specify_plots_style.py  step1.py  step1_launcher.py  step2.py  step2_launcher.py  treelib.py  ui_advanced_window.py  ui_colorStyleSetup.py  ui_dimensions_setter.py  ui_editSq.py  ui_filter_rule_editor.py  ui_helpGui.py  ui_import_from_database.py  ui_import_from_database_1.py  ui_import_from_database_new.py  ui_import_from_run_number.py  ui_iptsFileTransfer.py  ui_isotopes.py  ui_jobStatus.py  ui_launchMantid.py  ui_list_of_scan_loader_dialog.py  ui_loadTableIntermediateStep.py  ui_mainWindow.py  (+14 more)
addie/advanced/: isotope_rep_gui.py  isrp_gui_table_init.py
addie/advanced_window_handler/: advanced_window.py
addie/autoNOM/: auto_nom_launcher.py  auto_populate_widgets.py  event_handler.py  make_exp_ini_file_and_run_autonom.py  run_step1.py  step1_gui_handler.py  step1_utilities.py  step1_widgets_handler.py
addie/calculate_gr/: edit_sq_dialog.py  event_handler.py  gofrtree.py  gofrview.py  pdf_lines_manager.py  save_sq_dialog_message.py  sofqview.py
addie/calibration/: CalibrationDiagnostics.py  Calibration_plots.py  calculation_for_dspacing_resolution_by_pixel_peak.py  plot_utils.py
addie/configuration/: config_file_name_handler.py  export_configuration.py  import_configuration.py
addie/events_handler/: splitui_processing_tab.py  splitui_rietveld_tab.py
addie/general_handler/: help_gui.py  help_gui_table_initialization.py
addie/help_handler/: help_gui.py  help_gui_table_initialization.py
addie/icons/: icons.qrc  icons_rc.py
addie/initialization/: configuration.py  init_step1.py  init_step2.py  splitui_processing_tab.py
addie/make_calibration_handler/: make_calibration.py
addie/mantid_handler/: browse_file_folder_handler.py  mantid_reduction.py  mantid_thread.py
addie/master_table/: export_table.py  geometry_handler.py  import_from_database_handler.py  import_from_run_number_handler.py  import_table.py  mass_density_handler.py  master_table_exporter.py  master_table_loader.py  oncat_authentication_handler.py  placzek_handler.py  reduction_configuration_handler.py  selection_handler.py  table_plot_handler.py  table_row_handler.py  table_tree_handler.py  tree_definition.py  utilities.py
addie/menu/: event_handler.py
addie/plot/: __init__.py  canvas.py  constants.py  indicatormanager.py  mplgraphicsview.py  navigationtoolbar.py
addie/post_process_m/: event_handler.py  filelisttree.py  postprocesstable.py  ppmview.py
addie/processing_idl/: create_ndsum_file.py  create_sample_files.py  mantid_reduction_view.py  mantid_script_handler.py  populate_background_widgets.py  populate_master_table.py  run_sum_scans.py  step2_gui_handler.py  table_handler.py  undo_handler.py
addie/pyoncat/: __init__.py  _version.py  oncat.py
addie/rietveld/: braggtree.py  braggview.py  event_handler.py
addie/step1_handler/: autoNOM.py  auto_nom_launcher.py  auto_populate_widgets.py  make_exp_ini_file_and_run_autonom.py  run_step1.py  step1_gui_handler.py  step1_utilities.py  step1_widgets_handler.py
addie/step2_handler/: create_ndsum_file.py  create_sample_files.py  exp_ini_file_loader.py  export_table.py  generate_sumthing.py  import_table.py  run_ndabs.py  (+13 more)
conda.recipe/: anaconda_upload.sh  meta.yaml
designer/: FastGR_Helper.rst  README  gui_fgr3.ui  step2.ui  ui_advanced_window.ui  ui_colorStyleSetup.ui  ui_dimensions_setter.ui  ui_editSq.ui  ui_filter_rule_editor.ui  ui_helpGui.ui  ui_import_from_database.ui  ui_import_from_database_new.ui  ui_import_from_run_number.ui  ui_iptsFileTransfer.ui  ui_isotopes.ui  ui_jobStatus.ui  ui_launchMantid.ui  ui_list_of_scan_loader_dialog.ui  ui_loadTableIntermediateStep.ui  ui_logbook.ui  ui_mainWindow.ui  ui_mainWindow_no_scroll_bars.ui  ui_mainWindow_remove_me.ui  ui_make_calibration.ui  ui_mass_density.ui  ui_oncat_authentication.ui  ui_oncat_error_message.ui  ui_periodic_table.ui  ui_placzek.ui  ui_preview_ascii.ui  ui_reduction_configuration_dialog.ui  ui_solve_import_conflicts.ui  ui_table_tree.ui  usecases.txt
docs/: index.html
fastgr/: FastGR  __init__.py  _version.py  about.py  customtreeview.py  edit_sq_dialog.py  fastgrcontroller.py  fastgrdriver.py  graphicviewlib.py  icons_rc.py  ipythondockwidget.py  launcher.py  mantid_ipython_widget.py  mplgraphicsview.py  mplwidget.py  specify_plots_style.py  step1.py  step1_launcher.py  step2.py  treelib.py  ui_colorStyleSetup.py  ui_editSq.py  ui_helpGui.py  ui_iptsFileTransfer.py  ui_jobStatus.py  ui_launchMantid.py  ui_loadTableIntermediateStep.py  ui_logbook.py  ui_mainWindow.py  ui_mainWindow_no_scroll_bars.py
icons/: icons.qrc
scripts/: addie  addie_helper.html  fastgr  fastgr.old  gr_nr_plot.py
tests/: GSAS_NaNO3_230C.gsa  GSAS_NaNO3_275C.gsa  NOM_127827.gr  Nom_group_detectors.xml  __init__.py  density_test_table.json  gr_nr_plot.py  na_al_oh_table.json  nano3_single.json  nano3_test_table.json  runner.py  test_Deltad_d.py  test_addiedriver.py  test_fileio.py  test_rietveld.py
(+241 files in other folders)
