[metadata]
name = addie
description= Need a description
author = Dan, Wenduo, Jean
author_email = oldsdp@ornl.gov, zhou@ornl.gov, bilheuxjm@ornl.gov
url = http://github.com/neutrons/addie
project_urls =
    Bug Tracker = https://github.com/ornlneutronimaging/iMars3D/issues
long_description = file: README.md
license = The MIT License (MIT)
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8

[options]
include_pacage_data = True
python_requires >= 3.8
packages = find:
install_requires =
    periodictable
    psutil
    pystog
    qtpy
    simplejson
tests_require =
    mock
    pytest
    pytest-mpl
    pytest-qt
    typing
    versioningit

[options.entry_points]
console_scripts =
    addie = addie.main:main

[options.packages.find]
exclude =
    tests*

[options.package_data]
* =
   *.ui
   *.png
   *.qrc
   *.json

[bdist]
formats = rpm

[bdist_rpm]
requires = python, numpy, python-matplotlib, python-periodictable, PyQt4, mantidnightly
build_requires = python, python-setuptools, PyQt4, versioningit~=1.1
doc_files = README.md

[flake8]
ignore = E114,E115,E116,E121,E123,E126,E133,E2,E704,E722,E741,E743,W503,F403,F405,F999
exclude = addie/icons/icons_rc.py
doctests = True
max-line-length = 130
